clusters/prod/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-backend-service
  namespace: web
  labels:
    app: blog-backend
spec:
  selector:
    app: blog-backend
  ports:
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
  type: ClusterIP
